自己紹介サイトを更新しました

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 
 <body class="wrap">
   <div class="content">
-    <h1>プロフィール</h1>
     <div class="profile">
       <img src="images\googleiconmejiro.png" alt="かかののプロフィール画像">
       
       <h2>かかの@56期</h2>
       <br>
-      <p><b>資格:</b>CCNA,LPIC101-102,AWS CLF,<br>情報セキュリティマネジメント,ITパスポート
-  <br>
+      <p><b>資格:</b>CCNA,LPIC101-102,AWS CLF,<br>情報セキュリティマネジメント,ITパスポート<br>
   <br>
 
   <h2>自己紹介</h2>
@@ -24,7 +22,7 @@
   ネットワークエンジニア1年生です。<br>
   趣味は絵描き, 読書, ゲーム,<br>
   歴史, 音楽, 甘いもの巡りなど。<br>
-  クラウドやセキュリティに強いエンジニアになって<br>
+  クラウドやセキュリティに強いエンジニアになっ<br>
   リモート勤務するのが目標です。
 </p>
 
